Minor fixes:
 - Fix icon which was in the wrong place
 - Hide palette scrollbar (for Windows/Linux)
 - Tidy up gui npm scripts
 - Match page background to editor color so load and reflow is less jarring

--- a/Gui/src/app/palette-dialog/palette-dialog.component.scss
+++ b/Gui/src/app/palette-dialog/palette-dialog.component.scss
@@ -22,6 +22,10 @@ input:focus {
     height: 200px;
 }
 
+#plugin-list::-webkit-scrollbar {
+  display: none;
+}
+
 .plugin-name {
     display: block;
     font-weight: bold;
