--- a/Gui/src/styles.scss
+++ b/Gui/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #1E1E1E;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
